[package]
name = "rustpool"
version = "0.1.0"
authors = ["Charles Harris <cbharris@andeswebdesign.com>"]
edition = "2018"

[dependencies]
tokio = { version = "^1.6", features = ["full"] }
tokio-postgres = { version = "0.7.2", features = ["with-uuid-0_8", "with-serde_json-1"] }
reqwest = { version = "^0.11", features = ["json"] }
digest_auth = "0.3.0"
log = "^0.4"
env_logger = "^0.8"
num_cpus = "^1.13"
futures = "^0.3"
clap = "^2.33"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
rand = "^0.8"
uuid = { version = "^0.8", features = ["serde", "v4"] }
randomx-rs = "^0.5"
hex = "^0.4"
monero = { version = "^0.12", features = ["serde_support"] }
sha3 = "^0.9"
chrono = "^0.4"
num-bigint = "^0.4"
num-traits = "^0.2"
toml = "^0.5"
serde_yaml = "^0.8"
config = "^0.11"
